[package]
name = "runiversal"
version = "0.1.0"
authors = ["Pasindu Muthukuda <pasindumuth@gmail.com>"]
edition = "2018"
default-run = "transact"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
sqlparser = "0.9.0"
rmp-serde = "0.14.4"
rand = "0.7.3"
rand_xorshift = "0.2.0"
