[package]
name = "runiversal"
version = "0.1.0"
authors = ["Pasindu Muthukuda <pasindumuth@gmail.com>"]
edition = "2018"
default-run = "transact"

[profile.release]
debug-assertions = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
sqlparser = "0.9.0"
sqlformat = "0.1.8"
rmp-serde = "1.0.0"
rand = "0.7.3"
rand_xorshift = "0.2.0"
byteorder = "1.3.4"
clap = "3.0.13"
